# flodoto

./: Cargo.toml  Justfile  README.md
src/: main.css  main.js  main.rs
templates/: index.html.j2
