[package]
name = "flodoto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.9"
hickory-resolver = "0.24.2"
reqwest = "0.12.11"
serde = { version = "1.0.217", features = ["derive"] }
tokio = "1.42.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
x509-parser = "0.16.0"
