[package]
name = "flodoto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
base64 = "0.22.1"
hickory-resolver = "0.24.2"
maud = "0.26.0"
openssl = { version = "0.10.68", features = ["vendored"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
tokio = "1.42.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
x509-parser = "0.16.0"
